--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,8 @@
   /* #F5F5F5 #E96BF5 #0D11B4 */
 
   .btn1 {
-    background-image: linear-gradient(to left, #f5f5f5, #e96bf5, #0d11b4);
+    background-image: linear-gradient(to left, #f5f5f5, #e96bf5, #0d10b4);
+    background-size: 130% 900%
   }
   .btn:hover {
     background-position: right;
@@ -526,6 +527,37 @@
   100%{background-position:0% 51%}
 }
 
+.n1h {
+  background: linear-gradient(90deg, #000000, #000000);
+  background-size: 170% 900%;
+
+  -webkit-animation: problemAnimate 4s ease infinite;
+  -moz-animation: problemAnimate 4s ease infinite;
+  -o-animation: problemAnimate 4s ease infinite;
+  animation: problemAnimate 4s ease infinite;
+}
+
+@-webkit-keyframes problemAnimate {
+  0%{background-position:0% 51%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 51%}
+}
+@-moz-keyframes problemAnimate {
+  0%{background-position:0% 51%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 51%}
+}
+@-o-keyframes problemAnimate {
+  0%{background-position:0% 51%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 51%}
+}
+@keyframes problemAnimate {
+  0%{background-position:0% 51%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 51%}
+}
+
 
 .dynamic-text{
   height: 32px;
@@ -582,45 +614,3 @@ input[type="checkbox"]:checked {
   );
   border-radius: 70px;
 }
-
-/* _______________________________________________________________________________ */
-
-
-nav {
-  width: 100%;
-  height: 50px;
-  background: rgba(0,0,0, .8);
-  border-top: 1px solid rgba(255,255,255, .2);
-  border-bottom: 1px solid rgba(255,255,255, .2);
-  position: sticky;
-  top: 0;
-}
-
-nav ul {
-  display: flex;
-  margin: 0;
-  padding: 0 100px;
-  justify-content: flex-end;
-}
-
-nav ul li {
-  list-style: none;
-}
-
-nav ul li a {
-  display: block;
-  color: #fff;
-  padding: 0 10px;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: bold;
-  line-height: 50px; /**  Rarely used! **/
-}
-
-nav ul li a:hover,
-nav ul li a.active {
-  background: #f00;
-  
-} 
-
-
